--- a/about.html
+++ b/about.html
@@ -171,7 +171,8 @@
             <div class="section-title">
                 <span>About Us</span>
                 <h2>What We Do</h2>
-                <p>At David's Driving School, we are committed to providing top-notch driving education to students of all ages. Whether you're a nervous beginner or someone looking to refine their driving skills, our friendly and experienced instructors are here to help you succeed on the road.</p>
+                <p>At David's Driving School, we are committed to providing top-notch driving education to students of all ages.
+                     Whether you're a nervous beginner or someone looking to refine their driving skills, our friendly and experienced instructors are here to help you succeed on the road.</p>
             </div>
             <div class="row">
                 <div class="col-sm-6">
@@ -211,12 +212,43 @@
                         <p><strong>Call David to get started:</strong> +1 (323) 7246666</p>
                     </div>
                 </div>
-                <!-- <div class="col-sm-6">
+                <div class="col-sm-6">
                     <div class="section-title">
-                        <h4 class="font-pacifico">Convenient Pickup Service</h4>
-                        <p>To make your learning experience even more convenient, we offer a home pickup service. Our instructors will come to your house to pick you up for your driving lessons, ensuring you don't have to worry about transportation.</p>
+                        <h4 class="font-pacifico">Certified Driving Education For Minors</h4>
+                        <p>We provide a state-approved driving education certificate to all minors and 18-year-olds who pass their reading test.
+                             This certificate is required by the DMV in california and confirms that the student has completed 6 hours of driving education at our school.</p>
                     </div>
-                </div> -->
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <div class="section-title">
+                <span>About our cars</span>
+                <h2>Car Safety Features</h2>
+                <p>Our vehicles are equipped with dual control system for your safety.
+                    This means that there are two pedals on the right side: a gas pedal and a brake pedal, which our instructors can use to assist or stop the car in any emergency. 
+                    This ensures a safe and controlled learning environment, especially for nervous or first-time drivers.</p>
+        </div>
+        <div class="row">
+            <div class="col-sm-6">
+                <img src="img/gas1.jpeg" alt="" class="img-fluid">
+            </div>
+            <div class="col-sm-6">
+                <br>
+                <img src="img/gas2.jpeg" alt="" class="img-fluid">
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-sm-6">
+                <img src="img/gas3.jpeg" alt="" class="img-fluid">
+            </div>
+            <div class="col-sm-6">
+                <br>
+                <img src="img/gas5.jpeg" alt="" class="img-fluid">
             </div>
         </div>
     </section>
