--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
                         <p>Address 2 : Pomona Office: 926 E Thrid St, Pomona, CA 91766</p>
                         <ul>
                             <li>Phone : +1 (323) 7246666</li>
-                            <li>Email : Davidzeron1015@gmail.com</li>
+                            <li>Email : Davidzeron@yahoo.com</li>
                             <!-- <li>Fax : +8 (123) 456 789</li> -->
                         </ul>
                     </div>
