--- a/contact.html
+++ b/contact.html
@@ -162,7 +162,7 @@
                                 <div class="icon">
                                     <i class="fa fa-phone"></i>
                                 </div>
-                                <p><span>Davidzeron1015@gmail.com</span><span>+ 1 323-724-6666</span></p>
+                                <p><span>Davidzeron@yahoo.com</span><span>+ 1 323-724-6666</span></p>
                             </li>
                             <li>
                                 <div class="icon">
