--- a/courses.html
+++ b/courses.html
@@ -164,7 +164,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-6">
                     <div class="course__item">
-                        <img src="img/courses/course-3.jpg" alt="">
+                        <img src="img/winter4.jpg" alt="">
                         <h5>Winter Driving</h5>
                         <h4>$</h4>
                         <p>Enhance your winter driving skills with our specialized Winter Driving Course. This program covers essential techniques for safe driving in snowy and icy conditions. Whether you’re preparing for harsh weather or just want to improve your winter driving confidence, this course offers practical and expert guidance.</p>
