--- a/index.html
+++ b/index.html
@@ -139,6 +139,9 @@
                         <h2>Welcome To David's Driving School</h2>
                         <a href="contact.html" class="primary-btn">Contact us</a>
                         <a href="courses.html" class="primary-btn second-bg">See Courses</a>
+                        <br>
+                        <br>
+                        <h3 style="color:white; font-size: 30px; font-family: cursive;">Call us: +1 (323) 7246666</h3>
                     </div>
                 </div>
             </div>
