--- a/about.html
+++ b/about.html
@@ -157,6 +157,9 @@
                             <h2>Your Best Choice</h2>
                         </div>
                         <p> Explore our services and discover why we are your top choice in Driving.</p>
+
+                        <h3 style="color:white; font-size: 20px; font-family: cursive;">Call us: +1 (323) 7246666</h3>
+                        <br>
                         <a href="https://youtu.be/zzk1FZiUBqg?si=ggivc9VBgDER4m90" class="play-btn video-popup"><i class="fa fa-play"></i></a>
                     </div>
                 </div>
