--- a/contact.html
+++ b/contact.html
@@ -143,11 +143,11 @@
     <!-- Breadcrumb End -->
 
     <!-- Map Section Begin -->
-    <div class="map">
+<!--     <div class="map">
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3307.1292551625884!2d-118.1088818!3d34.014893!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2ce2aeccdd81b%3A0x5070790d35dfbe63!2sDavid&#39;s%20Driving%20School!5e0!3m2!1sen!2sng!4v1721047096763!5m2!1sen!2sng"
             height="400" style="border:0;" allowfullscreen=""></iframe>
-    </div>
+    </div> -->
     <!-- Map Section End -->
 
     <!-- Contact Section Begin -->
