--- a/courses.html
+++ b/courses.html
@@ -153,6 +153,8 @@
                     <div class="section-title">
                         <span>Our Great Team</span>
                         <h2>Our Courses</h2>
+                        <br>
+                        <h3 style="color:black; font-size: 15px; font-family: cursive;">Call us: +1 (323) 7246666</h3>
                     </div>
                 </div>
                 <!-- <div class="col-lg-5 col-md-5 col-sm-5">
