--- a/courses.html
+++ b/courses.html
@@ -166,10 +166,10 @@
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-6">
                     <div class="course__item">
-                        <img src="img/winter4.jpg" alt="">
-                        <h5>Winter Driving</h5>
+                        <img src="img/night1.jpg" alt="">
+                        <h5>Night Driving</h5>
                         <h4>$</h4>
-                        <p>Enhance your winter driving skills with our specialized Winter Driving Course. This program covers essential techniques for safe driving in snowy and icy conditions. Whether you’re preparing for harsh weather or just want to improve your winter driving confidence, this course offers practical and expert guidance.</p>
+                        <p>This program covers essential techniques for safe driving in low-light and nighttime conditions. Whether you’re preparing for long nighttime journeys or just want to improve your confidence when driving after dark, this course offers practical and expert guidance to help you navigate the roads safely when visibility is reduced.</p>
                         <a href="contact.html">Contact us for more information</a>
                     </div>
                 </div>
