--- a/contact.html
+++ b/contact.html
@@ -140,10 +140,18 @@
             </div>
         </div>
     </div>
+    <br>
+    <br>
+    <div class="container-fluid mt-5">
+        <h2><strong>How to Get in Touch (+ 1 323-724-6666)</strong></h2>
+        <br>
+        <p><strong>At <em>Driving School Name</em>, one call is all it takes to give you the information you need about our driving school and our 6-hour behind-the-wheel driving training. <br> Don’t hesitate—pick up the phone now, and let us guide you through our driving classes. We’re here to help you get on the road with confidence!</strong></p>
+    </div>
+    
     <!-- Breadcrumb End -->
 
     <!-- Map Section Begin -->
-<!--     <div class="map">
+    <!-- <div class="map">
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3307.1292551625884!2d-118.1088818!3d34.014893!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2ce2aeccdd81b%3A0x5070790d35dfbe63!2sDavid&#39;s%20Driving%20School!5e0!3m2!1sen!2sng!4v1721047096763!5m2!1sen!2sng"
             height="400" style="border:0;" allowfullscreen=""></iframe>
@@ -162,13 +170,21 @@
                                 <div class="icon">
                                     <i class="fa fa-phone"></i>
                                 </div>
-                                <p><span>Davidzeron@yahoo.com</span><span>+ 1 323-724-6666</span></p>
+                                <p><span>Davidzeron1015@gmail.com</span><span>+ 1 323-724-6666</span></p>
                             </li>
                             <li>
                                 <div class="icon">
                                     <i class="fa fa-map-marker"></i>
                                 </div>
                                 <p>Montebello Office: 222 Cedar Ct, Montebello, CA 90640</p>
+                            </li>
+                            <li>
+                                <div class="icon">
+                                    <i class="fa fa-map-marker"></i>
+                                </div>
+                                <p> Pomona Office: 926 E Third St, Pomona, CA 91766</p>
+                            </li>
+                            
                             <li>
                                 <div class="icon">
                                     <i class="fa fa-clock-o"></i>
@@ -247,7 +263,7 @@
                         <p>Address 1 : Montebello Office: 222 Cedar Ct, Montebello, CA 90640</p>
                         <p>Address 2 : Pomona Office: 926 E Thrid St, Pomona, CA 91766</p>                         <ul>
                             <li>Phone : +1 (323) 7246666</li>
-                            <li>Email : Davidzeron@yahoo.com</li>
+                            <li>Email : Davidzeron1015@gmail.com</li>
                             <!-- <li>Fax : +8 (123) 456 789</li> -->
                         </ul>
                     </div>
