--- a/contact.html
+++ b/contact.html
@@ -145,7 +145,7 @@
     <div class="container-fluid mt-5">
         <h2><strong>How to Get in Touch (+ 1 323-724-6666)</strong></h2>
         <br>
-        <p><strong>At <em>Driving School Name</em>, one call is all it takes to give you the information you need about our driving school and our 6-hour behind-the-wheel driving training. <br> Don’t hesitate—pick up the phone now, and let us guide you through our driving classes. We’re here to help you get on the road with confidence!</strong></p>
+        <p><strong>At <em> David Driving School</em>, one call is all it takes to give you the information you need about our driving school and our 6-hour behind-the-wheel driving training. <br> Don’t hesitate—pick up the phone now, and let us guide you through our driving classes. We’re here to help you get on the road with confidence!</strong></p>
     </div>
     
     <!-- Breadcrumb End -->
