--- a/about.html
+++ b/about.html
@@ -171,11 +171,11 @@
     <!-- About Hero Section End --> 
     <section>
         <div class="container mt-5">
-            <div class="section-title">
+             <div class="section-title">
                 <span>About Us</span>
                 <h2>What We Do</h2>
-                <p>At David's Driving School, we are committed to providing top-notch driving education to students of all ages.
-                     Whether you're a nervous beginner or someone looking to refine their driving skills, our friendly and experienced instructors are here to help you succeed on the road.</p>
+                <p>At David's Driving School, we have been in the driving education business since 1990, with over 34 years of experience in helping students of all ages gain confidence on the road. 
+                    Whether you're a nervous beginner or someone looking to refine their driving skills, our friendly and experienced instructors are here to ensure you succeed, we are committed to providing top-notch driving education, and our team has the expertise to guide you through every step of your learning journey.</p>
             </div>
             <div class="row">
                 <div class="col-sm-6">
