--- a/student.html
+++ b/student.html
@@ -139,7 +139,7 @@
             </div>
             <div class="col-sm-6">
                 <br>
-                <img src="img/student1.jpeg" alt="">
+                <img src="img/student4.jpeg" alt="">
             </div>
         </div>
         <div class="row mt-5">
@@ -155,10 +155,10 @@
             <div class="col-sm-6">
                 <img src="img/student4.jpeg" alt="">
             </div>
-            <div class="col-sm-6">
+            <!-- <div class="col-sm-6">
                 <br>
                 <img src="img/student2.jpeg" alt="">
-            </div>
+            </div> -->
         </div>
     </div>
 <br>
@@ -211,7 +211,7 @@
                         <p>Address 1 : Montebello Office: 222 Cedar Ct, Montebello, CA 90640</p>
                         <p>Address 2 : Pomona Office: 926 E Thrid St, Pomona, CA 91766</p>                         <ul>
                             <li>Phone : +1 (323) 7246666</li>
-                            <li>Email : Davidzeron@yahoo.com</li>
+                            <li>Email : Davidzeron1015@gmail.com</li>
                             <!-- <li>Fax : +8 (123) 456 789</li> -->
                         </ul>
                     </div>
